# ChangeLog for sys-kernel/git-sources
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.52 2006/12/25 14:27:21 masterdriverz Exp $

*git-sources-2.6.20_rc2 (25 Dec 2006)

  25 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
  +git-sources-2.6.20_rc2.ebuild:
  Bump to 2.6.20_rc2

*git-sources-2.6.20_rc1-r7 (20 Dec 2006)

  20 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
  +git-sources-2.6.20_rc1-r7.ebuild:
  Bump to version 2.6.20_rc1-r7

*git-sources-2.6.20_rc1-r5 (18 Dec 2006)

  18 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
  +git-sources-2.6.20_rc1-r5.ebuild:
  Version bump to 2.6.20_rc1-r5

*git-sources-2.6.20_rc1-r4 (16 Dec 2006)

  16 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
  +git-sources-2.6.20_rc1-r4.ebuild:
  Bump to 2.6.20_rc1-r4

*git-sources-2.6.20_rc1-r1 (16 Dec 2006)

  16 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
  -git-sources-2.6.19_rc1-r1.ebuild, -git-sources-2.6.19_rc1-r2.ebuild,
  -git-sources-2.6.19_rc1-r3.ebuild, -git-sources-2.6.19_rc3.ebuild,
  -git-sources-2.6.19_rc6-r5.ebuild, -git-sources-2.6.19_rc6-r8.ebuild,
  -git-sources-2.6.19_rc6-r9.ebuild, -git-sources-2.6.19_rc6-r10.ebuild,
  -git-sources-2.6.19-r4.ebuild, -git-sources-2.6.19-r5.ebuild,
  -git-sources-2.6.19-r7.ebuild, -git-sources-2.6.19-r11.ebuild,
  -git-sources-2.6.19-r12.ebuild, -git-sources-2.6.19-r13.ebuild,
  -git-sources-2.6.19-r14.ebuild, -git-sources-2.6.19-r17.ebuild,
  -git-sources-2.6.19-r18.ebuild, -git-sources-2.6.19-r20.ebuild,
  +git-sources-2.6.20_rc1-r1.ebuild:
  Bump to 2.6.20-rc1-r1 and clean out old versions

*git-sources-2.6.19-r20 (14 Dec 2006)

  14 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
  +git-sources-2.6.19-r20.ebuild:
  Bump to version 2.6.19-r20

*git-sources-2.6.19-r18 (12 Dec 2006)

  12 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
  +git-sources-2.6.19-r18.ebuild: