@@ -1,0 +1,9 @@
+MD5 443c265b57e87eadc0c677c3acc37e20 linux-2.6.19.tar.bz2 42733268
+RMD160 75dc65b15cf9cdb359b1abe7084907982c19088b linux-2.6.19.tar.bz2 42733268
+SHA256 c2fd6bcd2b7c1b3d37d64e4d1825703792a75474830a3db7d2dc603a8d392d58 linux-2.6.19.tar.bz2 42733268
+MD5 6989880aaf19d75fbad356446f5ddeb7 patch-2.6.20-rc2-git1.bz2 36468
+RMD160 ab289ff031d594c711530e6d363172d4ea65977d patch-2.6.20-rc2-git1.bz2 36468
+SHA256 b590aa2b76893c4d032d36b076b9ede65cf7ca9bf336070d1e86293515b53d0f patch-2.6.20-rc2-git1.bz2 36468
+MD5 4faf72e4e70867a85dae6db27f98a78f patch-2.6.20-rc2.bz2 3556466
+RMD160 8e6de277a2af8a9d272dd4e1fa8c12fce83273d3 patch-2.6.20-rc2.bz2 3556466
+SHA256 e189cc48d433eb6c3ac3cdfb57c05a2abe134d4f3cd3430bdc9ccaddf06f7efa patch-2.6.20-rc2.bz2 3556466
