@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.52 2006/12/25 14:27:21 masterdriverz Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.53 2006/12/30 10:20:45 masterdriverz Exp $
+
+*git-sources-2.6.20_rc2-r1 (30 Dec 2006)
+
+  30 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
+  +git-sources-2.6.20_rc2-r1.ebuild:
+  Bump to version 2.6.20_rc2-git1
 
 *git-sources-2.6.20_rc2 (25 Dec 2006)
 
